--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboard-server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.ts",
+  "main": "app.ts",
   "scripts": {
     "server": "ts-node app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
